fix show code collapse animation jump test

--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -1928,23 +1928,9 @@ textarea.form-control.is-invalid {
   z-index: 3;
 }
 
-.accordion-item:first-of-type {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
-}
-
 .accordion-item:first-of-type .accordion-button {
   border-top-left-radius: calc(0.5rem - 1px);
   border-top-right-radius: calc(0.5rem - 1px);
-}
-
-.accordion-item:not(:first-of-type) {
-  border-top: 0;
-}
-
-.accordion-item:last-of-type {
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
 }
 
 .accordion-item:last-of-type .accordion-button.collapsed {
@@ -6283,6 +6269,13 @@ textarea.form-control.is-invalid {
   position: sticky;
 }
 
+.inset-6 {
+  top: 1.5rem;
+  right: 1.5rem;
+  bottom: 1.5rem;
+  left: 1.5rem;
+}
+
 .inset-y-0 {
   top: 0px;
   bottom: 0px;
@@ -6368,20 +6361,20 @@ textarea.form-control.is-invalid {
   z-index: 10;
 }
 
-.z-\[1040\] {
-  z-index: 1040;
-}
-
-.z-\[999\] {
-  z-index: 999;
-}
-
 .z-\[1000\] {
   z-index: 1000;
 }
 
 .z-\[1045\] {
   z-index: 1045;
+}
+
+.z-\[1040\] {
+  z-index: 1040;
+}
+
+.z-\[999\] {
+  z-index: 999;
 }
 
 .col-span-2 {
@@ -6672,12 +6665,12 @@ textarea.form-control.is-invalid {
   margin-top: 1.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
-}
-
 .ml-auto {
   margin-left: auto;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .mb-2\.5 {
@@ -6734,6 +6727,10 @@ textarea.form-control.is-invalid {
 
 .-mb-8 {
   margin-bottom: -2rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .box-content {
@@ -6959,6 +6956,10 @@ textarea.form-control.is-invalid {
   width: 3rem;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-32 {
   width: 8rem;
 }
@@ -6977,10 +6978,6 @@ textarea.form-control.is-invalid {
 
 .w-1\/2 {
   width: 50%;
-}
-
-.w-5 {
-  width: 1.25rem;
 }
 
 .w-7 {
@@ -7009,6 +7006,10 @@ textarea.form-control.is-invalid {
   width: fit-content;
 }
 
+.w-\[1em\] {
+  width: 1em;
+}
+
 .w-36 {
   width: 9rem;
 }
@@ -7027,10 +7028,6 @@ textarea.form-control.is-invalid {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[1em\] {
-  width: 1em;
 }
 
 .min-w-max {
@@ -7189,14 +7186,14 @@ textarea.form-control.is-invalid {
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.rotate-0 {
-  --tw-rotate: 0deg;
+.rotate-\[-180deg\] {
+  --tw-rotate: -180deg;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.rotate-\[-180deg\] {
-  --tw-rotate: -180deg;
+.rotate-0 {
+  --tw-rotate: 0deg;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -8154,6 +8151,11 @@ textarea.form-control.is-invalid {
   padding-right: 0.25rem;
 }
 
+.py-3\.5 {
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
+}
+
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -8177,11 +8179,6 @@ textarea.form-control.is-invalid {
 .px-3\.5 {
   padding-left: 0.875rem;
   padding-right: 0.875rem;
-}
-
-.py-3\.5 {
-  padding-top: 0.875rem;
-  padding-bottom: 0.875rem;
 }
 
 .pb-20 {
@@ -8294,6 +8291,10 @@ textarea.form-control.is-invalid {
 
 .pr-6 {
   padding-right: 1.5rem;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
 }
 
 .text-left {
@@ -8831,6 +8832,17 @@ textarea.form-control.is-invalid {
           transition-duration: 150ms;
 }
 
+.transition-transform {
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 150ms;
+          transition-duration: 150ms;
+}
+
 .transition-shadow {
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
@@ -8847,17 +8859,6 @@ textarea.form-control.is-invalid {
   transition-property: opacity, -webkit-transform;
   transition-property: transform, opacity;
   transition-property: transform, opacity, -webkit-transform;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transition-duration: 150ms;
-          transition-duration: 150ms;
-}
-
-.transition-transform {
-  -webkit-transition-property: -webkit-transform;
-  transition-property: -webkit-transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-duration: 150ms;
@@ -9560,14 +9561,14 @@ h1 {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.active\:text-blue-800:active {
-  --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity));
-}
-
 .active\:text-zinc-800:active {
   --tw-text-opacity: 1;
   color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+
+.active\:text-blue-800:active {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
 .active\:no-underline:active {
@@ -10181,20 +10182,6 @@ h1 {
   }
 }
 
-.\[\&\[data-te-backdrop-show\]\]\:opacity-50[data-te-backdrop-show] {
-  opacity: 0.5;
-}
-
-.\[\&\.flex\]\:bg-red-700.flex {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
-.\[\&\:not\(\.xd\)\]\:bg-red-700:not(.xd) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
 .\[\&\:not\(\.collapsed\)\]\:bg-white:not(.collapsed) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -10242,4 +10229,8 @@ h1 {
 
 .\[\&\.disabled\]\:opacity-25.disabled {
   opacity: 0.25;
+}
+
+.\[\&\[data-te-backdrop-show\]\]\:opacity-50[data-te-backdrop-show] {
+  opacity: 0.5;
 }
